--- a/index.css
+++ b/index.css
@@ -1,68 +1,70 @@
 body {
-    font-family: sans-serif;
-    min-width: 320px;
+  font-family: sans-serif;
 }
-* {
-  box-sizing: border-box;
-}
-
 p {
   margin: 0;
 }
  
+/** Navbar**/
+.navbar {
+  display: flex;
+  border-bottom: 1px solid white;
+  max-width: 100%;
+}
+nav {
+  flex-direction: row;
+  width: 100%;
+}
+@media (max-width: 1100px){}
 
-
-
-
+/** Principal content**/
 .main {
-    display: flex;
-    margin: 0;
-    padding: 0;
+  display: flex;
+  margin: 0;
+  padding: 0;
 }
-
 .principal {
-    min-width: 87%;
-    height: 150vh;
-    margin-right: 0px;
-    margin-left: 0px;
-    padding: 20px;
-    justify-content: center;
+  min-width: 87%;
+  height: 150vh;
+  margin-right: 0px;
+  margin-left: 0px;
+  padding: 0 20px 20px 20px;
+  justify-content: center;
 }
 
+/** Compétences **/
+.columns {
+  display: flex;
+}
+
+
+
+
+/**Sticky sidebar**/
 .sidebar {
-    display: flex;
-    flex-direction: column;
-    min-width: 13%;
-    max-width: 50%;
-    margin: 0;
-    
-    top: 0;
-    
+  display: flex;
+  flex-direction: column;
+  min-width: 13%;
+  max-width: 50%;
+  margin: 0;
+  top: 0;   
 }
-
 .icon {
-    display: flex;
-    flex-direction: column;
-    min-width: 2.2em;
-    max-width: 5em;
+  display: flex;
+  flex-direction: column;
+  min-width: 2.2em;
+  max-width: 5em;
 }
 .icon a {
   margin-top: 0.5em;
   margin-bottom: 0.5em;
 }
 .iconSidebare {
-    
-    top: 0;
-    display: flex;
-    justify-content: center;
-    border-bottom: 1px solid white;
-    border-left: 1px solid white;
-    min-width: 100%;
-    padding-top: 5em;
-}
-
-
-.nav {
+  top: 0;
   display: flex;
-  align-items: center;
+  justify-content: center;
+  border-bottom: 1px solid white;
+  border-left: 1px solid white;
+  min-width: 100%;
+  padding-top: 5em;
 }
